massive update tests and interfaces cleanup